# ChildParentProcesses

./: .gitignore  CMakeLists.txt  README.md  child.cpp  parent.cpp
lib/: runner.cpp  runner.h
